// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivationChecklist render 0/1 complete 1`] = `
<div
  className="activation-checklist"
>
  <div
    className="activation-checklist__item"
  >
    <div
      data-tooltip="detail1"
      onClick={[Function]}
    >
      <span
        className="activation-item__link"
      >
        <div
          className="activation-item"
        >
          title1
           
          <svg
            className="mdi-icon icon-inline activation-item__checkbox--todo"
            fill="currentColor"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2Z"
            />
          </svg>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render 0/1 complete 2`] = `
<div
  className="activation-checklist"
>
  <div
    className="activation-checklist__item"
  >
    <div
      data-tooltip="detail1"
      onClick={[Function]}
    >
      <span
        className="activation-item__link"
      >
        <div
          className="activation-item"
        >
          title1
           
          <svg
            className="mdi-icon icon-inline activation-item__checkbox--todo"
            fill="currentColor"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2Z"
            />
          </svg>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render 1/1 complete 1`] = `
<div
  className="activation-checklist"
>
  <div
    className="activation-checklist__item"
  >
    <div
      data-tooltip="detail1"
      onClick={[Function]}
    >
      <span
        className="activation-item__link"
      >
        <div
          className="activation-item"
        >
          title1
           
          <svg
            className="mdi-icon icon-inline activation-item__checkbox--done"
            fill="currentColor"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
            />
          </svg>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render loading 1`] = `
<div
  className="activation-checklist"
>
  <div>
    <div
      className="loading-spinner icon-inline"
    />
  </div>
</div>
`;
